objects/acslider__Carousel__c.object
<CustomObject>
    <fields>
        <fullName>acslider__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acslider__Content__c</fullName>
        <description>Content which will be placed on the image. HTML is supported.</description>
        <inlineHelpText>Content which will be placed on the image. HTML is supported.</inlineHelpText>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acslider__Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Community Image Slider</label>
    <listViews>
        <fullName>acslider__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Carousel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Image Slider</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>